<?xml version="1.0" encoding="utf-8"?>
<!--10121030-Bambang Jayasantika-3 Juni 2024-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="18dp">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:padding="0dp"
            app:srcCompat="@drawable/baseline_arrow_back_24"
            tools:layout_editor_absoluteX="79dp"
            tools:layout_editor_absoluteY="62dp"
            android:contentDescription="backbutton" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/desk_awal"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rectangle"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/text_info"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/black"
                android:textSize="12sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:textColor="#757575"
                android:text="@string/desk_form"
                android:fontFamily="@font/roboto_regular"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:text="@string/text_jenistes"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="74dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/alert"
                android:fontFamily="@font/roboto_regular"
                android:textColor="#16A75C"
                android:textSize="10sp" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/opsites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rapid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_rad1"
                android:fontFamily="@font/roboto_regular"
                android:buttonTint="#16A75C"/>

            <RadioButton
                android:id="@+id/pcr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_rad2"
                android:fontFamily="@font/roboto_regular"
                android:buttonTint="#16A75C"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tglkon"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/alert"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:textColor="#16A75C"/>
            </LinearLayout>

            <EditText
                android:hint="Pilih Tanggal"
                android:fontFamily="@font/roboto_regular"
                android:id="@+id/edt_tglkon"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text"
                android:textColor="@color/black"
                android:drawableRight="@drawable/baseline_calendar_month_24"
                android:paddingRight="16dp"
                android:paddingLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_nik"
                android:textColor="@color/black"
                android:textSize="14sp"/>
            <EditText
                android:hint="Masukkan NIK"
                android:id="@+id/edt_nik"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text"
                android:textColor="@color/black"
                android:inputType="number"
                android:paddingLeft="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_nama"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/alert"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:textColor="#16A75C"/>
            </LinearLayout>
            <EditText
                android:hint="Masukkan nama"
                android:fontFamily="@font/roboto_regular"
                android:id="@+id/edt_nama"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text"
                android:textColor="@color/black"
                android:inputType="textCapWords"
                android:paddingLeft="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tgl"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/alert"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:textColor="#16A75C"/>
            </LinearLayout>

            <EditText
                android:hint="Pilih Tanggal"
                android:fontFamily="@font/roboto_regular"
                android:id="@+id/edt_tgl"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text"
                android:textColor="@color/black"
                android:drawableRight="@drawable/baseline_calendar_month_24"
                android:paddingRight="16dp"
                android:paddingLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_jk"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/alert"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:textColor="#16A75C"/>
            </LinearLayout>
            <RadioGroup
                android:id="@+id/opsiJK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/jk_p"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_rad3"
                    android:fontFamily="@font/roboto_regular"
                    android:buttonTint="#16A75C"/>

                <RadioButton
                    android:id="@+id/jk_l"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_rad4"
                    android:fontFamily="@font/roboto_regular"
                    android:buttonTint="#16A75C"/>
                />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_hub"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/alert"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:textColor="#16A75C"/>
            </LinearLayout>

            <RadioGroup
                android:id="@+id/opsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/hub_ortu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_hub1"
                    android:fontFamily="@font/roboto_regular"
                    android:buttonTint="#16A75C"/>

                <RadioButton
                    android:id="@+id/hub_suis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_hub2"
                    android:fontFamily="@font/roboto_regular"
                    android:buttonTint="#16A75C"/>
                <RadioButton
                    android:id="@+id/hub_anak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_hub3"
                    android:buttonTint="#16A75C"/>
                <RadioButton
                    android:id="@+id/hub_lainnya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_hub4"
                    android:buttonTint="#16A75C"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cek"
                android:fontFamily="@font/roboto_regular"
                android:textSize="12sp"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_lanjut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button"
            android:text="@string/text_lanjut"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/white"/>
    </LinearLayout>
</ScrollView>